--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,93 @@
-body {
-    margin: 0px;
+@font-face {
+    font-family: 'Roboto';
+    src: 
+        url('Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+        url('Roboto-Regular.woff') format('woff'),
+        url('Roboto-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
-.logo-src {
-    width: 50px;
-    height: 50px;
-    padding: 10px 5px;
+
+
+*, html, body {
+    margin:0 auto;
+    box-sizing: border-box; 
+    font-family: 'Roboto';
 }
 
-.nav-bar {
+header{
     display: flex;
-    background-color: #06D9D9
+    justify-content: flex-start;
+    height: 80px;
+    background-color: #06D9D9;
+    padding-bottom: 5px;
+    padding-top: 5px;
 }
 
-.nav-bar-btns {
-   margin: auto 0;
+header > img{
+    margin-right: 0;
+    margin-left: 20px;
+    -webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
 }
 
-.nav-bar-btn {
-    margin: 0 15px;
+header > img:hover,
+header > img:focus{
+    -webkit-transform: scale(1.1);
+	transform: scale(1.1);
+    cursor: pointer;
+}
+
+nav{
+    display:flex;
+    padding:15px 20px;
+    margin-left:10px;
+}
+
+header > button,
+nav > button{
     background: #3c3449;
-    color: white;
-    border-radius: 6px;
-}
-
-.enter {
-     margin: auto 0 auto auto;
-     
-}
-
-.enter-btn {
-    margin: 0 15px;
-    background: #3c3449;
+    border-color:#3c3449;
+    padding:10px 20px;
+    margin-left:20px;
     color: white;
     border-radius: 6px;  
 }
 
+header > button{
+    margin-right: 30px;
+    padding: 10px 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+header > button:hover,
+header > button:focus,
+nav > button:hover,
+nav > button:focus{
+    background: #3c1529;
+    border-color:#3c1529;
+}
+
+
+
 footer {
+    position: absolute;
+    bottom: 0;
+    width:100%;
     display: block;
-    height: 200px;
     background: lightgray;  
 }
 
 .footer-info  {
     padding: 20px;
 }
+
+.footer-info > h2{
+    margin-bottom:20px;
+}
+
 
