--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,6 @@ nav > button:focus{
 
 
 footer {
-    position: absolute;
     bottom: 0;
     width:100%;
     display: block;
@@ -90,4 +89,106 @@ footer {
     margin-bottom:20px;
 }
 
+
+.about {
+    padding: 43px;
+    }
+    
+    li {
+    list-style-type: none;
+    padding: 3px 20px;
+    }
+    
+    .usual__check {
+    padding-left: 1.21em;
+    }
+    
+    .usual__check__input {
+    display:none;
+    position: absolute;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    }
+    
+    .usual__check__box {
+    position: absolute;
+    margin-top: 0.2em;
+    margin-left: -1em;
+    width: 0.6em;
+    height: 0.6em;
+    border-radius: 0.05em;
+    background-color: white;
+    -webkit-box-shadow: 0 0 0 0.1em #4A90E2;
+    box-shadow: 0 0 0 0.1em #4A90E2;
+    }
+    
+    .usual__check__input:checked + .usual__check__box {
+    background-color: #4A90E2;
+    background-image:url('../img/check.svg');
+    }
+    
+    .usual__check__input:focus + .usual__check__box {
+    -webkit-box-shadow:
+    0 0 0 0.1em #4A90E2,
+    0 0 0 0.2em #7ED321;
+    box-shadow:
+    0 0 0 0.1em #4A90E2,
+    0 0 0 0.2em #7ED321;
+    }
+    
+    .test {
+    max-width: 800px;
+    margin: 0;
+    }
+    
+    .student-contacts {
+    padding: 10px 53px;
+    margin: 0;
+    }
+    
+    .initials {
+    display: flex;
+    align-items: center;
+    width: 500px;
+    margin: 0;
+    }
+    
+    .placeholder-box {
+    display: block;
+    position: relative;
+    margin: 20px 0;
+    }
+    
+    .placeholder-box input {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    height: 35px;
+    line-height: 35px;
+    padding: 0 10px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #495057;
+    background-color: #fff;
+    border: 1px solid #ced4da;
+    border-radius: 5px;
+    }
+    .placeholder-text {
+    display: block;
+    width: 100%;
+    line-height: 37px;
+    position: absolute;
+    left: 10px;
+    top: 0;
+    bottom: 0;
+    color: #888;
+    cursor: text;
+    user-select: none;
+    margin: 0;
+    }
+    
+    .placeholder-box input:invalid + .placeholder-text {
+    display: block;
+    }
 
