--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 @font-face {
     font-family: 'Roboto';
     src: 
-        url('Roboto-Regular.eot?#iefix') format('embedded-opentype'),
-        url('Roboto-Regular.woff') format('woff'),
-        url('Roboto-Regular.ttf') format('truetype');
+        local('Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+        local('Roboto-Regular.woff') format('woff'),
+        local('Roboto-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -12,18 +19,25 @@
 
 *, html, body {
     margin:0 auto;
-    box-sizing: border-box; 
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; 
     font-family: 'Roboto';
 }
 
+
 header{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-start;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     height: 80px;
     background-color: #06D9D9;
     padding-bottom: 5px;
     padding-top: 5px;
 }
+
 
 a{
     margin:0;
@@ -31,7 +45,7 @@ a{
     color: black;
 }
 
-form{
+form, section{
     margin:0;
 }
 
@@ -39,19 +53,24 @@ header > a > img{
     margin-right: 0;
     margin-left: 20px;
     -webkit-transform: scale(1);
-	transform: scale(1);
+	-ms-transform: scale(1);
+	    transform: scale(1);
 	-webkit-transition: .3s ease-in-out;
+	-o-transition: .3s ease-in-out;
 	transition: .3s ease-in-out;
 }
 
 header > a > img:hover,
 header > a > img:focus{
     -webkit-transform: scale(1.1);
-	transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	    transform: scale(1.1);
     cursor: pointer;
 }
 
 nav{
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
     padding:15px 20px;
     margin-left:10px;
@@ -82,12 +101,19 @@ nav > form > button:focus{
     border-color:#3c1529;
 }
 
+.absolute{
+    position: absolute;
+}
+
+.relative{
+    position: relative;
+}
 
 
 footer {
-    position: relative;
-	min-height: 100%;
-    display: block;
+    position: absolute;
+    bottom:0;
+    width: 100%;
     background: lightgray;  
 }
 
@@ -214,20 +240,33 @@ table {
 }
 
 .main__student {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	padding: 20px 40px;
 }
 .main__students-initials {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	margin: 0;
 	max-width: 400px;
 }
 
 .main__students-email {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	margin: 0;
 	max-width: 400px;
 	margin-right: 100px;
@@ -257,11 +296,27 @@ table {
 
 .placeholder-box1 input {
 	display: block;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	width: 100%;
 	height: 35px;
 	line-height: 35px;
 	padding: 0 10px;
+	font-size: 14px;
+	font-weight: 400;
+	color: #495057;
+	background-color: #fff;
+	border: 1px solid #ced4da;
+	border-radius: 5px;
+}
+
+.input-answer{
+    display: block;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
+	width: 100%;
+	height: 35px;
+	line-height: 35px;
 	font-size: 14px;
 	font-weight: 400;
 	color: #495057;
@@ -283,7 +338,8 @@ input[type="text"]:focus {
 
 .placeholder-box2 input {
 	display: block;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	width: 100%;
 	height: 35px;
 	line-height: 35px;
@@ -305,7 +361,10 @@ input[type="text"]:focus {
 	bottom: 0;
 	color: #888;
 	cursor: text;
-	user-select: none;
+	-webkit-user-select: none;
+	   -moz-user-select: none;
+	    -ms-user-select: none;
+	        user-select: none;
 	margin: 0;
 }
  
@@ -319,43 +378,33 @@ input[type="text"]:focus {
     border-radius: 6px; 
 }
 
-.main__students__button:focus{
-    background: #3c1529;
-    border-color:#3c1529;
-}
+.main__students__button:focus,
 .main__students__button:hover{
     background: #3c1529;
     border-color:#3c1529;
 }
 
-
-
-
-
 .inf{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    width: 1200px;
-    height: 450px;
-    flex-direction: column;
-    
-    justify-content: left;
 }
 
 .inf-block{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    height: 300px;
-    width: 1000px;
-    justify-content:flex-start;
-    align-items: baseline;
-    padding-left: 50px;  
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 70px;
 }
 
 .inf-block-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     width: 750px;
     padding-top: 50px;
 }
@@ -364,28 +413,35 @@ input[type="text"]:focus {
 }
 .inf-block-form-box{
     font-size: 18px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 450px;
-    
+    margin: 0;
 }
 
 .inf-but {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    width: 279px;
-    height: 18px;
-    align-items: center;
-    padding-left:50px;
-    
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0;
 }
 .inf-button{
-    text-align: center;
-    color: white;
-    background-color: black;
+	background: #3c3449;
+    border-color:#3c3449;
     font-size: 18px;
-    
-    width: 279px;
-    height: 41px;
-    
+    color: white;
+    padding: 10px 25px;
+    border-radius: 6px;
+    margin-bottom: 40px;
+}
+
+.inf-button:hover,
+.inf-button:focus{
+    background: #3c1529;
+    border-color:#3c1529;
 }
 
 
@@ -412,46 +468,68 @@ input[type="text"]:focus {
     width: 150px;
 }
 
-.auth {
-    display: flex;
-    flex-direction: column;
- 
+.hide{
+    visibility: hidden;
 }
-.auth-inf {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
 
+.show{
+    visibility:visible;
+}
+
+.auth-inf {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     padding-top: 50px;
+    width: 15%;
 }
 .auth-inf-log {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
     padding-left: 8px;
+    width: 100%;
 }
 .auth-inf-pass {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items:center;
+    width: 100%;
 }
 .input {
     margin-left: 50px;
-
+    margin-bottom: 25px;
+    width: 100%;
+    height: 25px;
+    border:1px solid #ced4da;
+    border-radius: 5px;
 }
 .auth-inf-p{
     font-size: 18px;
     
 }
 .auth-but {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding-top: 20px;
     padding-left: 90px;
+    margin-bottom: 40px;
 }
 .auth-button {
-    background-color: #c4c4c4;
+    color:white;
+	background: #3c3449;
+    border-color:#3c3449;
+    padding: 10px 30px;
+    border-radius: 6px;
+}
 
+.auth-button:hover,
+.auth-button:focus{
+    background: #3c1529;
+    border-color:#3c1529;
 }
